Improve SEO by adding more meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Search Engine Optimization -->
+    <meta
+      property="description"
+      content="Mizu (水) - PWA to track your water-drinking activities."
+    />
     <meta property="og:title" content="Mizu" />
     <meta
       property="og:description"
